--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.Tarea1.jar=C:\\Users\\leandro\\Documents\\NetBeansProjects\\Nueva Carpeta\\help4travel-radanile\\dist\\Tarea1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -40,7 +39,7 @@ jar.compress=false
 javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${libs.PostgreSQLDriver.classpath}:\
-    ${file.reference.Tarea1.jar}
+    ${reference.ServidorCentral.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -69,6 +68,8 @@ javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
+project.ServidorCentral=../ServidorCentral/ServidorCentral
+reference.ServidorCentral.jar=${project.ServidorCentral}/dist/ServidorCentral.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
